--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
   font-family: 'Poppins', sans-serif;
+  font-size: 14px;
 }
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 80px;
-  margin-top: 40px;
+  gap: 60px;
+  margin: 20px;
 }
 
 .container-form {
@@ -26,12 +27,12 @@
   cursor: pointer;
   display: inline-flex;
   flex-shrink: 0;
-  font-size: 16px;
+  font-size: 12px;
   gap: 8px;
   justify-content: center;
   line-height: 1.5;
   overflow: hidden;
-  padding: 12px 16px;
+  padding: 10px 16px;
   text-decoration: none;
   text-overflow: ellipsis;
   transition: all 0.14s ease-out;
@@ -69,12 +70,17 @@
 .text {
   margin-top: 10px;
   text-align: center;
+  color: black;
 }
 
 input {
   padding: 10px;
   min-width: 200px;
   height: 40px;
+}
+
+.steps-container {
+  color: green !important;
 }
 
 .container-points {
@@ -96,7 +102,7 @@ input {
 .hr {
   border: 0px;
   width: 150px;
-  height: 10px;
+  height: 8px;
   border-radius: 5px;
 }
 
@@ -110,4 +116,21 @@ input {
 .animated {
   margin: 0px;
   padding: 0px;
+  text-align: center;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #b5b5b5;
+  text-align: center;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #efefef;
 }
