--- a/style.css
+++ b/style.css
@@ -17,9 +17,11 @@
   gap: 25px;
   margin: 20px;
 }
+
 .container-table {
   max-width: 55vw;
 }
+
 .button {
   outline: 0;
   grid-gap: 8px;
@@ -95,6 +97,7 @@ input {
   align-items: center;
   flex-direction: column;
 }
+
 .container-steps-text {
   width: 35vw;
 }
@@ -122,6 +125,7 @@ input {
   border: 1px solid rgb(118, 16, 16);
   background-color: #f8d8d8;
 }
+
 .color-three:hover {
   box-shadow: 4px 4px 0 rgb(154, 11, 11);
 }
@@ -140,6 +144,7 @@ input {
 .hr-green {
   background-color: green;
 }
+
 .animated {
   margin: 0px;
   padding: 0px;
@@ -194,32 +199,40 @@ tr:nth-child(even) {
     margin: 5vh 0vw;
     font-size: 24px !important;
   }
+
   button {
     font-size: 22px;
   }
+
   .title {
     font-size: 26px;
   }
+
   .container {
     flex-wrap: wrap;
   }
+
   .container-form {
     justify-content: space-between;
     gap: 40px;
     margin: 80px 2vw;
   }
+
   input {
     min-width: 355px;
     min-height: 55px;
   }
+
   .info {
     margin-top: -30px;
     right: 10vw;
   }
+
   .info img {
     height: 50px !important;
     width: 50px !important;
   }
+
   .tooltiptext {
     width: 240px;
     margin: 60px -20vw;
@@ -227,5 +240,13 @@ tr:nth-child(even) {
   .container-steps-text {
     font-size: 16px !important;
     width: 55vw;
+  }
+
+  input {
+    font-size: 22px;
+  }
+
+  table {
+    font-size: 24px;
   }
 }
